# logic-gates-library

./: .buildinfo  CMakeLists.txt  README.md  example.c  genindex.html  index.html  objects.inv  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/workflows/: docs.yml
docs/: Doxyfile  conf.py  index.rst
src/: gate.c  gate.h  vector.c  vector.h
